Fix navbar spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,7 +44,9 @@ header {
   }
 }
 
-
+body {
+  padding-top: 70px;
+}
 
 
 
